# dux-ai-desktop

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
shared/: window-definitions.json
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ChatPanel.vue  ChildWindowShell.vue  DesktopWindowControls.vue  MessageBubble.vue  SettingsDialog.vue  WindowSidebar.vue
src/lib/: app-windows.ts  desktop-store.ts  dux-ai.ts  runtime.ts  settings-repository.ts  theme.ts  window-definitions.ts  window.ts
src/stores/: chat.ts  settings.ts
src/types/: chat.ts
src/views/: AboutWindowView.vue  MainWindowView.vue  SettingsWindowView.vue
